k8s/clusters/homelabk8s01/infrastructure/authentik/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    kubernetes.io/metadata.name: auth
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
