k8s/clusters/homelabk8s01/infrastructure/authentik/referencegrant.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: outpost-from-apps
  namespace: auth
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: arr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: goldilocks
  to:
    - group: ""
      kind: Service
      name: ak-outpost-authentik-embedded-outpost
